Add class DataHandler to handle climate data

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -1,16 +1,16 @@
 
 set(SOURCE 
-${CMAKE_SOURCE_DIR}/Storage/Src/DataHandler.cpp 
+${CMAKE_SOURCE_DIR}/Core/Src/DataHandler.cpp
 )
 
 # Add the library
-add_library(Storage "${SOURCE}")
+add_library(Core "${SOURCE}")
 
 # Add the library
 
 # add the binary tree to the search path for include files
 # so that we will find TutorialConfig.h
-target_include_directories(Storage PUBLIC
+target_include_directories(Core PUBLIC
                           "./Inc"
                           )
 
