--- a/Hardware/CMakeLists.txt
+++ b/Hardware/CMakeLists.txt
@@ -1,7 +1,9 @@
 
 set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 set(THREADS_PREFER_PTHREAD_FLAG TRUE)
+set(CMAKE_CXX_FLAGS -pthread)
 find_package(Threads REQUIRED)
+
 
 set(SOURCE 
 ${CMAKE_SOURCE_DIR}/Hardware/Src/Uart.cpp 
@@ -11,6 +13,13 @@ ${CMAKE_SOURCE_DIR}/Hardware/Src/Ethernet.cpp
 
 # Add the library
 add_library(Hardware "${SOURCE}")
+
+target_link_libraries(Hardware PUBLIC
+                      Core
+                      Threads::Threads
+)
+
+#target_link_libraries(myprog Threads::Threads )
 
 # Add the library
 
