--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -10,6 +10,8 @@ ${CMAKE_SOURCE_DIR}/Core/Src/CommandDataHandler.cpp
 ${CMAKE_SOURCE_DIR}/Core/Src/CoreController.cpp
 ${CMAKE_SOURCE_DIR}/Core/Src/Timer.cpp
 ${CMAKE_SOURCE_DIR}/Core/Src/Sensor.cpp
+${CMAKE_SOURCE_DIR}/Core/Src/SensorAirPressure.cpp
+${CMAKE_SOURCE_DIR}/Core/Src/SensorTemperature.cpp
 )
 
 # Add the library
