--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -12,6 +12,7 @@ ${CMAKE_SOURCE_DIR}/Core/Src/Timer.cpp
 ${CMAKE_SOURCE_DIR}/Core/Src/Sensor.cpp
 ${CMAKE_SOURCE_DIR}/Core/Src/SensorAirPressure.cpp
 ${CMAKE_SOURCE_DIR}/Core/Src/SensorTemperature.cpp
+${CMAKE_SOURCE_DIR}/Core/Src/Watchdog.cpp
 )
 
 # Add the library
